# auth47-python

./: .env.example  .gitignore  .railwayignore  Procfile  README.md  pyproject.toml  requirements.txt  setup.py  test-production.py  tests.py
examples/web-app/: README.md  app.py  requirements.txt
examples/web-app/templates/: base.html  index.html  login.html  protected.html
src/: __init__.py  auth47-1.py
