[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth47"
version = "1.2.1"
description = "A Python implementation of the Auth47 protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LGPL-3.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bitcoin", "auth47", "authentication", "bip47", "paynym"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
full = [
    "bitcoinlib>=0.6.14",
    "bip47>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "pylint>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/auth47-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]